; ModuleID = '/home/carl/AnghaBench/mruby/src/extr_fmt_fp.c_mrb_float_to_str.c'
source_filename = "/home/carl/AnghaBench/mruby/src/extr_fmt_fp.c_mrb_float_to_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mrb_float_to_str(i32* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca [25 x i8], align 16
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %8 = getelementptr inbounds [25 x i8], [25 x i8]* %7, i64 0, i64 0
  %9 = load i8*, i8** %6, align 8
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @mrb_float(i32 %10)
  %12 = call i32 @snprintf(i8* %8, i32 25, i8* %9, i32 %11)
  %13 = load i32*, i32** %4, align 8
  %14 = getelementptr inbounds [25 x i8], [25 x i8]* %7, i64 0, i64 0
  %15 = call i32 @mrb_str_new_cstr(i32* %13, i8* %14)
  ret i32 %15
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #1

declare dso_local i32 @mrb_float(i32) #1

declare dso_local i32 @mrb_str_new_cstr(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
